Implement URL preview generation

--- a/src/components/utils/ImageViewer.css
+++ b/src/components/utils/ImageViewer.css
@@ -25,3 +25,4 @@
 // Updated on 2025-03-07 03:34:07
 // Updated on 2025-03-23 20:40:58
 // Updated on 2025-04-04 12:21:58
+// Updated on 2025-02-14 20:14:39
