Fix mobile keyboard issues

--- a/src/components/utils/ImageViewer.css
+++ b/src/components/utils/ImageViewer.css
@@ -29,3 +29,4 @@
 // Updated on 2025-02-28 19:55:04
 // Updated on 2025-03-01 10:55:43
 // Updated on 2025-03-01 07:25:10
+// Updated on 2025-03-01 07:43:58
