Implement new system prompt interface

--- a/src/components/utils/ImageViewer.css
+++ b/src/components/utils/ImageViewer.css
@@ -31,3 +31,4 @@
 // Updated on 2025-03-01 07:25:10
 // Updated on 2025-03-01 07:43:58
 // Updated on 2025-03-07 02:03:38
+// Updated on 2025-03-08 19:51:35
