Implement message deletion functionality

--- a/src/components/utils/ImageViewer.css
+++ b/src/components/utils/ImageViewer.css
@@ -32,3 +32,4 @@
 // Updated on 2025-03-01 07:43:58
 // Updated on 2025-03-07 02:03:38
 // Updated on 2025-03-08 19:51:35
+// Updated on 2025-03-13 13:39:43
